[gd_scene load_steps=10 format=3 uid="uid://877qua1psfdd"]

[ext_resource type="Script" uid="uid://nvowfvpxukky" path="res://mini games/bucket/bucket_mini_game.gd" id="1_xxxx"]
[ext_resource type="Shader" uid="uid://r3nsaproj2ap" path="res://shaders/workpiece_shader.gdshader" id="2_xxxx"]
[ext_resource type="Texture2D" uid="uid://dmuq6d4yl7422" path="res://assets/smithing/pngimg.com - sword_PNG5525.png" id="3_xxxx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp6gl"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.65098)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bucket"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5

[sub_resource type="Gradient" id="Gradient_steam"]
offsets = PackedFloat32Array(0, 0.7, 1)
colors = PackedColorArray(1, 1, 1, 0.8, 1, 1, 1, 0.3, 1, 1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xxxx"]
shader = ExtResource("2_xxxx")
shader_parameter/forge_progress = 1.0
shader_parameter/initial_deform = Vector2(1, 1)
shader_parameter/forge_center = Vector2(0.5, 0.5)
shader_parameter/impact_radius = 0.4
shader_parameter/bulge_strength = 0.0
shader_parameter/noise_influence = 0.0
shader_parameter/heat_amount = 1.0
shader_parameter/heat_at_top = false
shader_parameter/heat_spread = 2.0
shader_parameter/heat_min_level = 0.2
shader_parameter/heat_gradient_power = 0.8
shader_parameter/heat_gradient_smooth = 0.7
shader_parameter/heat_glow_threshold = 0.3
shader_parameter/heat_glow_intensity = 0.6
shader_parameter/heat_color_intensity = 0.85
shader_parameter/impact_intensity = 0.0
shader_parameter/impact_band_width = 0.1
shader_parameter/impact_color = Color(1, 1, 1, 1)
shader_parameter/flip_done = false
shader_parameter/impact_y_position = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_steam_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_steam_fg"]
bg_color = Color(0.8, 0.8, 0.8, 0.6)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="BucketMiniGame" type="CanvasLayer"]
script = ExtResource("1_xxxx")
cooling_speed = 0.15

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_top = 40.0
offset_right = 92.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Загартовування"
horizontal_alignment = 1

[node name="GamePanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 380.0
offset_top = -200.0
offset_right = 780.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dp6gl")

[node name="BucketContainer" type="Panel" parent="UI/GamePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bucket")

[node name="WaterSurface" type="ColorRect" parent="UI/GamePanel/BucketContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 10.0
grow_horizontal = 2
color = Color(0.1, 0.5, 0.9, 0.6)

[node name="Water" type="ColorRect" parent="UI/GamePanel/BucketContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.4, 0.8, 0.4)

[node name="SteamParticles" type="CPUParticles2D" parent="UI/GamePanel/BucketContainer"]
unique_name_in_owner = true
position = Vector2(150, 0)
emitting = false
amount = 300
lifetime = 2.0
preprocess = 0.2
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(150, 1)
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, -20)
initial_velocity_min = 50.0
initial_velocity_max = 80.0
scale_amount_min = 5.0
scale_amount_max = 7.5
color = Color(1, 1, 1, 0.8)
color_ramp = SubResource("Gradient_steam")

[node name="WorkpieceIndicator" type="TextureRect" parent="UI/GamePanel"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_xxxx")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 75)
texture = ExtResource("3_xxxx")
expand_mode = 5
stretch_mode = 5

[node name="SteamProgressBar" type="ProgressBar" parent="UI/GamePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_steam_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_steam_fg")
step = 1.0
value = 20.0
show_percentage = false

[node name="Label" type="Label" parent="UI/GamePanel/SteamProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Прогрес охолодження"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuenchButton" type="TextureRect" parent="UI/GamePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = 50.0
offset_right = 64.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(64, 64)
stretch_mode = 5

[node name="FeedbackLabel" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 25)
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Загартуйте виріб у воді"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionsLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Зажміть A щоб занурити виріб у воду
Відпустіть коли пара майже зникне"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="Node" parent="."]

[node name="QuenchSound" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
volume_db = -10.0

[node name="SteamSound" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
volume_db = -15.0
